@@ -1,10 +1,10 @@
+// RestaurantService.java
 package com.danmatmap.service;
 
 import com.danmatmap.dto.RestaurantResponseDto;
 import com.danmatmap.entity.Restaurant;
 import com.danmatmap.entity.RestaurantTag;
 import com.danmatmap.entity.Tag;
-import com.danmatmap.mapper.RestaurantMapper;
 import com.danmatmap.repository.RestaurantRepository;
 import com.danmatmap.repository.RestaurantTagRepository;
 import com.danmatmap.repository.TagRepository;
@@ -13,56 +13,64 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class RestaurantService {
 
     private final RestaurantRepository restaurantRepository;
     private final TagRepository tagRepository;
     private final RestaurantTagRepository restaurantTagRepository;
-    private final RestaurantMapper restaurantMapper;
 
-    // ✅ 전체 식당 목록 (status = A)
+    // 전체 식당 목록 조회
+    @Transactional(readOnly = true)
     public List<RestaurantResponseDto> getAllRestaurants() {
-        return restaurantRepository.findByStatus("A").stream()
-                .map(restaurantMapper::toDto)
-                .toList();
+        return restaurantRepository.findAll().stream()
+                .map(RestaurantResponseDto::fromEntity)
+                .collect(Collectors.toList());
     }
 
-    // ✅ 특정 태그로 연결된 식당 목록 조회
+    // 태그 이름으로 식당 목록 조회
+    @Transactional(readOnly = true)
     public List<RestaurantResponseDto> getRestaurantsByTag(String tagName) {
-        List<RestaurantTag> tagged = restaurantTagRepository.findByTag_Name(tagName);
-
-        return tagged.stream()
+        List<RestaurantTag> tagRelations = restaurantTagRepository.findByTag_Name(tagName);
+        return tagRelations.stream()
                 .map(RestaurantTag::getRestaurant)
-                .filter(r -> "A".equals(r.getStatus()))
-                .distinct()
-                .map(restaurantMapper::toDto)
-                .toList();
+                .distinct() // 중복 제거
+                .map(RestaurantResponseDto::fromEntity)
+                .collect(Collectors.toList());
     }
 
-    // ✅ 특정 ID로 식당 상세 조회
+    // 식당 상세 조회
+    @Transactional(readOnly = true)
     public RestaurantResponseDto getRestaurantById(Long id) {
         Restaurant restaurant = restaurantRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("식당을 찾을 수 없습니다."));
-        return restaurantMapper.toDto(restaurant);
+                .orElseThrow(() -> new NoSuchElementException("해당 ID의 식당이 존재하지 않습니다."));
+        return RestaurantResponseDto.fromEntity(restaurant);
     }
 
-    // ✅ 식당에 태그 추가
+    // 식당에 태그 추가
+    @Transactional
     public void addTagToRestaurant(Long restaurantId, String tagName) {
         Restaurant restaurant = restaurantRepository.findById(restaurantId)
-                .orElseThrow(() -> new RuntimeException("식당을 찾을 수 없습니다."));
+                .orElseThrow(() -> new NoSuchElementException("식당을 찾을 수 없습니다."));
 
         Tag tag = tagRepository.findByName(tagName)
-                .orElseGet(() -> tagRepository.save(new Tag(tagName)));
+                .orElseGet(() -> tagRepository.save(Tag.builder().name(tagName).build()));
 
-        RestaurantTag rt = RestaurantTag.builder()
+        // 중복 추가 방지
+        boolean alreadyExists = restaurant.getRestaurantTags().stream()
+                .anyMatch(rt -> rt.getTag().getName().equals(tagName));
+        if (alreadyExists) return;
+
+        RestaurantTag restaurantTag = RestaurantTag.builder()
                 .restaurant(restaurant)
                 .tag(tag)
                 .build();
 
-        restaurantTagRepository.save(rt);
+        restaurant.getRestaurantTags().add(restaurantTag);
+        restaurantTagRepository.save(restaurantTag);
     }
 }
